titanic add cat

--- a/titanic/01.ipynb
+++ b/titanic/01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,10 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import Imputer\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "# measure\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# 忽略警告\n",
     "import warnings\n",
@@ -28,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +256,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Pclass  \\\n",
+       "0            1         0       3   \n",
+       "1            2         1       1   \n",
+       "2            3         1       3   \n",
+       "3            4         1       1   \n",
+       "4            5         0       3   \n",
+       "\n",
+       "                                                Name     Sex   Age  SibSp  \\\n",
+       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+       "\n",
+       "   Parch            Ticket     Fare Cabin Embarked  \n",
+       "0      0         A/5 21171   7.2500   NaN        S  \n",
+       "1      0          PC 17599  71.2833   C85        C  \n",
+       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
+       "3      0            113803  53.1000  C123        S  \n",
+       "4      0            373450   8.0500   NaN        S  "
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_train_tf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +548,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -436,57 +592,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 分开类别和数值型数据\n",
     "num_attribute = [\"Pclass\", \"Age\", \"SibSp\", \"Parch\", \"Fare\"]\n",
-    "cat_attribute = [\"Name\",\"Sex\", \"Ticket\", \"Cabin\", \"Embarked\"]"
+    "cat_attribute = [\"Embarked\", \"Sex\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_train_tf[\"Embarked\"] = dataset_train_tf[\"Embarked\"].fillna(\"S\")\n",
+    "# dataset_train_tf = dataset_train_tf.drop([\"Cabin\"], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_pipeline = Pipeline([\n",
+    "    (\"selector\", DataFrameSelector(num_attribute)),\n",
     "    (\"imputer\", Imputer(strategy=\"median\")),\n",
+    "    (\"std_scaler\", StandardScaler())\n",
+    "])\n",
+    "\n",
+    "cat_pipeline = Pipeline([\n",
+    "    (\"selector\", DataFrameSelector(cat_attribute)),\n",
+    "    (\"cat_encoder\", CategoricalEncoder(encoding=\"onehot-dense\"))\n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataset_train_tf[\"Embarked\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataset_num_pipeline = num_pipeline.fit_transform(dataset_tf)\n",
+    "# dataset_cat_pipeline = cat_pipeline.fit_transform(dataset_train_tf)\n",
+    "from sklearn.pipeline import FeatureUnion\n",
+    "full_pipeline = FeatureUnion(transformer_list=[\n",
+    "    (\"num_pipeline\", num_pipeline),\n",
+    "    (\"cat_pipeline\", cat_pipeline),\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_num = dataset_train_tf[num_attribute]"
+    "dataset_full_pipeline = full_pipeline.fit_transform(dataset_train_tf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 253,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_num_pipeline = num_pipeline.fit_transform(dataset_num)"
-   ]
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.82737724, -0.56573646,  0.43279337, -0.47367361, -0.50244517,\n",
+       "        0.        ,  0.        ,  1.        ,  0.        ,  1.        ])"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_train = dataset_num_pipeline\n",
+    "dataset_train = dataset_full_pipeline\n",
     "dataset_label = dataset_tf[\"Survived\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +714,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,83 +727,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predict_y = log_reg.predict(test_X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# measure\n",
-    "from sklearn.metrics import accuracy_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7206703910614525"
+       "0.8100558659217877"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "predict_y = log_reg.predict(test_X)\n",
     "accuracy_score(test_y, predict_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8100558659217877"
+      ]
+     },
+     "execution_count": 260,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=500, n_jobs=1,\n",
+       "            oob_score=False, random_state=None, verbose=0,\n",
+       "            warm_start=False)"
+      ]
+     },
+     "execution_count": 265,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rdf_cla = RandomForestClassifier(n_estimators=500)\n",
+    "rdf_cla.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8212290502793296"
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_y = rdf_cla.predict(test_X)\n",
+    "accuracy_score(test_y, predict_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 去预测给出测试数据的精确度\n",
-    "dataset_test_num = dataset_test_tf[num_attribute]\n",
-    "dataset_test_num_pipeline = num_pipeline.transform(dataset_test_num)"
+    "dataset_test_full_pipeline = full_pipeline.transform(dataset_test_tf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predict_y = log_reg.predict(dataset_test_num_pipeline)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "predict_y = log_reg.predict(dataset_test_full_pipeline)\n",
     "result =pd.DataFrame({\n",
     "        \"PassengerId\": dataset_test_tf[\"PassengerId\"],\n",
     "        \"Survived\": predict_y\n",
-    "    })"
+    "    })\n",
+    "result.to_csv(\"result.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "result.to_csv(\"result.csv\", index=False)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
