--- a/titanic/01.ipynb
+++ b/titanic/01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 225,
+     "execution_count": 335,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 226,
+     "execution_count": 336,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 338,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 一些可视化\n",
+    "# 数据间的相互关系\n",
+    "corr_matrix = dataset_train_tf.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pclass        -0.338481\n",
+       "Age           -0.077221\n",
+       "SibSp         -0.035322\n",
+       "PassengerId   -0.005007\n",
+       "Parch          0.081629\n",
+       "Fare           0.257307\n",
+       "Survived       1.000000\n",
+       "Name: Survived, dtype: float64"
+      ]
+     },
+     "execution_count": 339,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_matrix[\"Survived\"].sort_values() #数据建的相互相关， 1， -1 最有用"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,26 +709,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.82737724, -0.56573646,  0.43279337, -0.47367361, -0.50244517,\n",
-       "        0.        ,  0.        ,  1.        ,  0.        ,  1.        ])"
-      ]
-     },
-     "execution_count": 253,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +747,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 348,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +769,7 @@
        "0.8100558659217877"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,32 +781,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8100558659217877"
-      ]
-     },
-     "execution_count": 260,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +810,7 @@
        "            warm_start=False)"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 350,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +832,7 @@
        "0.8212290502793296"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +844,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 352,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingClassifier(criterion='friedman_mse', init=None,\n",
+       "              learning_rate=0.1, loss='deviance', max_depth=3,\n",
+       "              max_features=None, max_leaf_nodes=None,\n",
+       "              min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "              min_samples_leaf=1, min_samples_split=2,\n",
+       "              min_weight_fraction_leaf=0.0, n_estimators=500,\n",
+       "              presort='auto', random_state=None, subsample=1.0, verbose=0,\n",
+       "              warm_start=False)"
+      ]
+     },
+     "execution_count": 352,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "gb_cla = GradientBoostingClassifier(n_estimators=500)\n",
+    "gb_cla.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7988826815642458"
+      ]
+     },
+     "execution_count": 353,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_y = gb_cla.predict(test_X)\n",
+    "accuracy_score(test_y, predict_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
