--- a/house_prices/01.ipynb
+++ b/house_prices/01.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -17,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +466,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 519,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +878,7 @@
        "[8 rows x 38 columns]"
       ]
      },
-     "execution_count": 521,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1066,7 @@
        "[4 rows x 43 columns]"
       ]
      },
-     "execution_count": 522,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1210,7 @@
        "((1314, 269), (146, 269), (1314,))"
       ]
      },
-     "execution_count": 531,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1258,7 @@
        "           oob_score=False, random_state=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 533,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,16 +1281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1557771978.9963696"
+       "745367155.9882877"
       ]
      },
-     "execution_count": 535,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,14 +1303,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "419110298.117343"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "gbr_reg = GradientBoostingRegressor(n_estimators=1000, max_depth=2)\n",
+    "gbr_reg.fit(X_train, y_train)\n",
+    "y_pred = gbr_reg.predict(X_test)\n",
+    "scores_mse = mean_squared_error(y_pred, y_test)\n",
+    "scores_mse"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1308,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1338,16 +1367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = rdf_reg.predict(X_test_pipeline)"
+    "y_pred = gbr_reg.predict(X_test_pipeline)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
